# Godium

./: CMakeLists.txt  build.sh  launch.sh  main.cpp
Windows/: DragData.h  MainWindow.h  VirtualGroup.cpp  VirtualGroup.h  VirtualWindow.cpp  VirtualWindow.h  WindowFactory.h
Windows/Editor/: EditorWindow.cpp  EditorWindow.h
editor/: code_editor.cpp  code_editor.h  line_number_area.cpp
windows/: main_window.h  virtual_group.cpp  virtual_group.h  virtual_window.h  window_factory.cpp  window_factory.h
windows/editor/: code_editor.cpp  code_editor.h  editor_window.cpp  editor_window.h  line_number_area.cpp  line_number_area.h
windows_management/: virtual_group.h  window_factory.h
